fix: resolve Docker build failures for 5 out of 7 components
This commit systematically fixes Docker build context and dependency issues affecting
the GitHub Actions CI/CD workflows. The following components are now building successfully:

✅ FIXED COMPONENTS:
- orchestrator: Fixed go.mod dependencies, removed unused tests import, added prometheus
- ran-dms: Fixed Dockerfile to use component-specific go.mod path
- cn-dms: Fixed directory structure + created missing pkg/errors/go.mod module
- o2-client: Fixed Dockerfile directory structure for correct relative paths
- tn-agent: Fixed Dockerfile directory structure for tn module builds

🔧 KEY FIXES:
- Created pkg/errors/go.mod module to resolve cn-dms import issues
- Updated Dockerfile COPY commands to use correct go.mod paths from components
- Fixed Docker working directory setup to match Go module relative path expectations
- Added missing replace directives in root go.mod for tests module
- Cleaned up orchestrator dependencies (prometheus, removed unused tests)

📊 PROGRESS: 5/7 Docker builds now working (71% success rate)

⚠️  REMAINING ISSUES:
- tn-manager: Code compilation errors in enhanced_manager.go
- vnf-operator: Complex dependency resolution with tests module

This significantly improves GitHub Actions workflow success rate and addresses
the systematic Docker build context issues that were blocking CI/CD.

Co-authored-by: hctsai1006 <39769660@cuni.cz>

--- a/deploy/docker/ran-dms/Dockerfile
+++ b/deploy/docker/ran-dms/Dockerfile
@@ -25,8 +25,8 @@ RUN --mount=type=cache,target=/var/cache/apk \
 # Set working directory
 WORKDIR /workspace
 
-# Copy go mod files from project root for layer caching
-COPY go.mod go.sum ./
+# Copy go mod files from ran-dms component for layer caching
+COPY ran-dms/go.mod ran-dms/go.sum ./
 
 # Copy required source code for ran-dms
 COPY pkg/ pkg/
