--- a/deploy/docker/cn-dms/Dockerfile
+++ b/deploy/docker/cn-dms/Dockerfile
@@ -25,12 +25,12 @@ RUN --mount=type=cache,target=/var/cache/apk \
 # Set working directory
 WORKDIR /workspace
 
-# Copy go mod files from project root for layer caching
-COPY go.mod go.sum ./
-
-# Copy required source code for cn-dms
+# Copy required source code maintaining relative path structure
 COPY pkg/ pkg/
 COPY cn-dms/ cn-dms/
+
+# Set working directory to cn-dms for build
+WORKDIR /workspace/cn-dms
 
 # Set Go environment for reproducible builds
 ENV GO111MODULE=on \
@@ -50,7 +50,7 @@ RUN --mount=type=cache,target=/go/pkg/mod \
     -trimpath \
     -ldflags="-s -w -extldflags '-static'" \
     -a -installsuffix cgo \
-    -o /workspace/cn-dms ./cn-dms/cmd/dms/main.go
+    -o /workspace/cn-dms ./cmd/dms/main.go
 
 # Stage 2: Minimal runtime (scratch-based)
 FROM scratch AS runtime
